--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -2,10 +2,7 @@
 FROM node:18-alpine
 
 # Creating the working directory named `app`
-ENV HOME=/home/app/
-ENV APP_HOME=/home/app/npe-frontend
-RUN mkdir $APP_HOME
-WORKDIR $APP_HOME
+WORKDIR /home/app/npe-frontend
 
 # Copying all the tools and dependencies in the package.json file to the working directory `app`
 COPY package.json .
