--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -50,6 +50,7 @@ services:
       - certs:/etc/nginx/certs
       - html:/usr/share/nginx/html
       - vhost:/etc/nginx/vhost.d
+      - ./nginx:/etc/nginx/conf.d/
       - /var/run/docker.sock:/tmp/docker.sock:ro
     depends_on:
       - web
