--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,35 +24,40 @@
 
 http {
 
-    upstream server {
-        server http://marshallcodes.com:8000;
-    }
+    # upstream server {
+    #     server http://marshallcodes.com:8000;
+    # }
 
 	server {
-		server_name    www.marshallcodes.com marshallcodes.com;
+		# server_name    www.marshallcodes.com marshallcodes.com;
         listen         80;
 
 		location /static/ {
-			alias http://marshallcodes.com:8000/home/app/web/staticfiles/;
+			alias /home/app/web/staticfiles/;
 			add_header Access-Control-Allow-Origin *;
 		}
 
 		location /media/ {
-			alias http://marshallcodes.com:8000/home/app/web/mediafiles/;
+			alias /home/app/web/mediafiles/;
 			add_header Access-Control-Allow-Origin *;
 		}
+
 
 		location / {
 			proxy_pass http://localhost:8000;
 		}
-	}
 
-	server {
-		server_name    www.npe.marshallcodes.com npe.marshallcodes.com;
-        listen         80;
-
-		location / {
+		location /npe/ {
 			proxy_pass http://localhost:8001;
 		}
 	}
+
+	# server {
+	# 	server_name    www.npe.marshallcodes.com npe.marshallcodes.com;
+    #     listen         80;
+
+	# 	location / {
+	# 		proxy_pass http://localhost:8001;
+	# 	}
+	# }
 }
