--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,11 +29,11 @@ services:
         # Name of the dockerfile
       dockerfile: Dockerfile.prod
     container_name: npe-frontend
-    environment:
-      - VIRTUAL_HOST=npe.marshallcodes.com
-      - VIRTUAL_PORT=8001
-      - LETSENCRYPT_HOST=npe.marshallcodes.com
-      - LETSENCRYPT_EMAIL=marshallheyda@gmail.com
+    # environment:
+    #   - VIRTUAL_HOST=npe.marshallcodes.com
+    #   - VIRTUAL_PORT=8001
+    #   - LETSENCRYPT_HOST=npe.marshallcodes.com
+    #   - LETSENCRYPT_EMAIL=marshallheyda@gmail.com
     expose:
       - 8001
     stdin_open: true
@@ -50,7 +50,7 @@ services:
       - certs:/etc/nginx/certs
       - html:/usr/share/nginx/html
       - vhost:/etc/nginx/vhost.d
-      - ./nginx:/etc/nginx/conf.d/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf/
       - /var/run/docker.sock:/tmp/docker.sock:ro
     depends_on:
       - web
