--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -50,10 +50,11 @@ services:
       - certs:/etc/nginx/certs
       - html:/usr/share/nginx/html
       - vhost:/etc/nginx/vhost.d
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf/
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
+      - npe
   acme-companion:
     image: nginxproxy/acme-companion
     env_file:
