--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,35 +22,35 @@
 #     }
 # }
 
-http {
+# http {
 
     # upstream server {
     #     server http://marshallcodes.com:8000;
     # }
 
-	server {
-		# server_name    www.marshallcodes.com marshallcodes.com;
-        listen         80;
+# 	server {
+# 		# server_name    www.marshallcodes.com marshallcodes.com;
+#         listen         80;
 
-		location /static/ {
-			alias /home/app/web/staticfiles/;
-			add_header Access-Control-Allow-Origin *;
-		}
+# 		location /static/ {
+# 			alias /home/app/web/staticfiles/;
+# 			add_header Access-Control-Allow-Origin *;
+# 		}
 
-		location /media/ {
-			alias /home/app/web/mediafiles/;
-			add_header Access-Control-Allow-Origin *;
-		}
+# 		location /media/ {
+# 			alias /home/app/web/mediafiles/;
+# 			add_header Access-Control-Allow-Origin *;
+# 		}
 
 
-		location / {
-			proxy_pass http://localhost:8000;
-		}
+# 		location / {
+# 			proxy_pass http://localhost:8000;
+# 		}
 
-		location /npe/ {
-			proxy_pass http://localhost:8001;
-		}
-	}
+# 		location /npe/ {
+# 			proxy_pass http://localhost:8001;
+# 		}
+# 	}
 
 	# server {
 	# 	server_name    www.npe.marshallcodes.com npe.marshallcodes.com;
@@ -60,4 +60,22 @@ http {
 	# 		proxy_pass http://localhost:8001;
 	# 	}
 	# }
+# }
+
+
+
+
+server {
+    location / {
+        root /home/app/web;
+    }
+
+    location /npe/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://web:8001/;
+    }
 }
