--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,6 @@ services:
     command: gunicorn server.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/home/app/web
-      - static:/home/app/web/static
-      - media_volume:/home/app/web/mediafiles
     expose:
       - 8000
     env_file:
@@ -45,34 +43,13 @@ services:
       - 443:443
       - 80:80
     volumes:
-      - static:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
-      - certs:/etc/nginx/certs
-      - html:/usr/share/nginx/html
-      - vhost:/etc/nginx/vhost.d
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./national_park_explorer/static/:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
       - npe
-  acme-companion:
-    image: nginxproxy/acme-companion
-    env_file:
-      - ./.env.prod.proxy-companion
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - certs:/etc/nginx/certs
-      - html:/usr/share/nginx/html
-      - vhost:/etc/nginx/vhost.d
-      - acme:/etc/acme.sh
-    depends_on:
-      - nginx-proxy
 
 volumes:
   postgres_data:
   static:
   media_volume:
-  certs:
-  html:
-  vhost:
-  acme:
