--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -65,17 +65,33 @@
 
 
 
+# server {
+#     location / {
+#         root /home/app/web;
+#     }
+
+#     location /npe/ {
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+
+#         proxy_pass http://web:8001/;
+#     }
+# }
+
+
 server {
     location / {
-        root /home/app/web;
+        root /var/www/html;
     }
 
-    location /npe/ {
+    location /api/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://web:8001/;
+        proxy_pass http://npe:8001/;
     }
 }
