--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,7 +37,7 @@ services:
     stdin_open: true
   nginx-proxy:
     container_name: nginx-proxy
-    build: nginx
+    image: nginx:1-alpine
     restart: always
     ports:
       - 443:443
