--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,14 +3,14 @@
 ###########
 
 # pull official base image
-FROM python:3.10 as builder
+FROM python:3.10 AS builder
 
 # set work directory
 WORKDIR /home/app/web
 
 # set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # install system dependencies
 RUN apt-get update && \
