--- a/Dockerfile.embedding
+++ b/Dockerfile.embedding
@@ -5,7 +5,12 @@ WORKDIR /home/app/web
 ENV TRANSFORMERS_CACHE=/tmp/huggingface
 
 # Install system dependencies if needed
-RUN apt-get update && apt-get install -y build-essential && mkdir -p /tmp/huggingface && chmod -R 777 /tmp/huggingface
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    python3-dev \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/* \
+    && mkdir -p /tmp/huggingface && chmod -R 777 /tmp/huggingface
 
 # Copy requirements, install dependencies (add your embedding libs here)
 COPY requirements.txt .
