Update cron method

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -56,6 +56,9 @@ COPY . $APP_HOME
 RUN addgroup --system app && adduser --system --group app
 RUN chown -R app:app /home/app
 
+COPY sync-cron.sh $APP_HOME/sync-cron.sh
+RUN chmod +x $APP_HOME/sync-cron.sh
+
 # Use non-root user
 USER app
 
